--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 /.idea/
+**/target/**
+target/
+*.iml
+.idea/
+pom.xml.bak
+.DS_Store
+.settings
+.classpath
+*.log
+logs/
+.flattened-pom.xml
+lib/
